Fix spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -5460,7 +5460,11 @@ textarea.form-control-lg {
 .builtDesignedRole {
   background-color: #FFBA5B;
   font-weight: 700;
-  /* display: inline-block; */
+  display: inline-block;
+  margin-bottom: 1rem;
+}
+.builtDesignedRolePara {
+  margin-bottom: 0;
 }
 
 
